tests/invalid/expected_type.out
tests/invalid/expected_type.ri:3:9: error: expected type, found function
    3 | fn x(a: my_fn) {}
      |         ^
rivetc: error: could not compile module `expected_type`, aborting due to previous error